:bug: Fix big images overflowing the blog posts paragraphs

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -246,7 +246,7 @@
         }
 
         img {
-            max-width: 960px;
+            max-width: 100%;
             display: block;
             margin: auto;
             margin-bottom: 1rem;
